Added node-fetch, added audio_clips extraction through full stack

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formidable": "^1.2.2",
     "node-audiorecorder": "^2.2.0",
     "node-blob": "0.0.2",
+    "node-fetch": "^2.6.1",
     "pg": "^8.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
