--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/makemepresident/LynxAudio#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "blob": "^0.1.0",
     "body-parser": "^1.19.0",
     "derby": "^0.10.29",
