--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "https": "^1.0.0",
     "multer": "^1.4.2",
     "node-audiorecorder": "^2.2.0",
     "node-blob": "0.0.2",
